[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Intro.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/upheavtt.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.909804, 0.529412, 0.0823529, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.972549, 0.172549, 0.117647, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.984314, 0.619608, 0.188235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.988235, 0.364706, 0.321569, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 3 )

[node name="ColorRect" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="SkipButton" type="Button" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -71.0
margin_right = 127.0
margin_bottom = -22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "SKIP"

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 6.0
one_shot = true

[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
